Correzioni grafiche nella documentazione

--- a/docs/src/images/gabbia-logica.tex
+++ b/docs/src/images/gabbia-logica.tex
@@ -8,17 +8,18 @@
 
 \begin{figure}[H]
 	\centering
-	\caption{Gabbia logica della landing page.}
-	\label{fig:gabbie-logiche:landing-page}
-	\includegraphics[width=\textwidth]{images/gabbie-logiche/Landing}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
 	\caption{Gabbia logica della pagina di login.}
 	\label{fig:gabbie-logiche:login}
 	\includegraphics[width=\textwidth]{images/gabbie-logiche/Login}
 \end{figure}
+
+\begin{figure}[H]
+	\centering
+	\caption{Gabbia logica della landing page.}
+	\label{fig:gabbie-logiche:landing-page}
+	\includegraphics[height=\textheight-3ex]{images/gabbie-logiche/Landing}
+\end{figure}
+
 \begin{figure}[H]
 	\centering
 
