--- a/docs/src/images/storyboard.tex
+++ b/docs/src/images/storyboard.tex
@@ -10,47 +10,47 @@
 	\centering
 	\caption{Storyboard del login.}
 	\label{fig:storyboard:login}
-	\includegraphics[width=\textwidth]{images/storyboard/login}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/login}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Storyboard della registrazione.}
 	\label{fig:storyboard:sign-up}
-	\includegraphics[width=\textwidth]{images/storyboard/sign-up}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/sign-up}
 \end{figure}
 \begin{figure}[H]
 	\centering
 
 	\caption{Storyboard della dashboard}
 	\label{fig:storyboard:dashboard}
-	\includegraphics[width=\textwidth]{images/storyboard/dashboard}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/dashboard}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Storyboard della visualizzazione dei dettagli di un progetto.}
 	\label{fig:storyboard:project}
-	\includegraphics[width=\textwidth]{images/storyboard/project}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/project}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Storyboard della visualizzazione del report di un progetto.}
 	\label{fig:storyboard:report-project}
-	\includegraphics[width=\textwidth]{images/storyboard/report-project}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/report-project}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Storyboard della visualizzazione del report di un video.}
 	\label{fig:storyboard:report-video}
-	\includegraphics[width=\textwidth]{images/storyboard/report-video}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/report-video}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Storyboard della visualizzazione del profilo.}
 	\label{fig:storyboard:profilo}
-	\includegraphics[width=\textwidth]{images/storyboard/profile}
+	\includegraphics[height=\textheight-3ex]{images/storyboard/profile}
 \end{figure}
