--- a/docs/src/parts/documento_progettazione/_prototipo_editoriale.tex
+++ b/docs/src/parts/documento_progettazione/_prototipo_editoriale.tex
@@ -7,6 +7,7 @@
 % Free Documentation License".
 
 \chapter{Prototipo editoriale}\label{chap:prototipo-editoriale}
+
 Di seguito vengono riportati gli unici contenuti presenti nel sistema, ovvero 
 nella landing page, attraverso il prototipo funzionale con l'aggiunta appunto 
 dei contenuti.
@@ -15,12 +16,12 @@ dei contenuti.
 	\centering
 	\caption{Contenuto landing page: italiano.}
 	\label{fig:contenuto-landing:italiano}
-	\includegraphics[width=\textwidth]{images/prototipo-editoriale/ita}
+	\includegraphics[width=\textwidth-20ex]{images/prototipo-editoriale/ita}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\caption{Contenuto landing page: inglese.}
 	\label{fig:contenuto-landing:inglese}
-	\includegraphics[width=\textwidth]{images/prototipo-editoriale/eng}
+	\includegraphics[width=\textwidth-20ex]{images/prototipo-editoriale/eng}
 \end{figure}
