--- a/docs/src/parts/documento_progettazione/_web_design.tex
+++ b/docs/src/parts/documento_progettazione/_web_design.tex
@@ -16,7 +16,7 @@ storyboad delle pagine e i relativi prototipi di navigazione.
 La seguente mappa è la rappresentazione dei percorsi di navigazione del sito in 
 un contesto generale.
 
-\includegraphics{images/mappa-sito.png}
+\includegraphics[width=\linewidth]{images/mappa-sito.png}
 
 \section{Storyboard}\label{sec:storyboard}
 Gli storyboard sono la rappresentazione di particolari sequenze di navigazione 
