--- a/docs/src/parts/documento_requisiti/documento_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/documento_requisiti.tex
@@ -16,8 +16,8 @@
 
 \input{parts/documento_requisiti/_requisiti_gestione.tex}
 
-\begin{appendices}
-    % \input{parts/documento_requisiti/_glossario.tex}
-
-    \input{parts/documento_requisiti/_analisi_concorrenza.tex}
-\end{appendices}%testing purposes
+%\begin{appendices}
+%    % \input{parts/documento_requisiti/_glossario.tex}
+%
+%    \input{parts/documento_requisiti/_analisi_concorrenza.tex}
+%\end{appendices}%testing purposes
