--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -17,6 +17,7 @@
 \usepackage{tikz-uml}
 \usepackage{float}
 \usepackage{multirow}
+\usepackage{calc}
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \tikzumlset{fill class=none, fill usecase=emotionally-color!35}
@@ -30,7 +31,7 @@
 \title{Emotionally}
 \author{Alessandro Annese\\Davide De Salvo\\Andrea Esposito\\Graziano Montanaro\\Regina Zaccaria}
 \license{%
-\scriptsize Copyright \textcopyright{} 2019 FSC.
+\scriptsize Copyright \textcopyright{} 2019--2020 FSC.
 \vskip15pt
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
@@ -41,7 +42,7 @@ Free Documentation License''.%
 }
 \course{Informatica e Comunicazione Digitale}
 \doctype{Università degli Studi di Bari ``Aldo Moro''}
-\date{\today}
+\date{21 febbraio 2020}
 \version{1.0.0}
 
 \addbibresource{bibliography.bib}
@@ -55,8 +56,8 @@ Free Documentation License''.%
     % \cleardoublepage
     % \listoftables
     % \cleardoublepage
-    \printacronyms[heading=chapter*]
-    \cleardoublepage
+    %\printacronyms[heading=chapter*]
+    %\cleardoublepage
 
     \input{content.tex}
 \end{document}
