Miglioramenti alla documentazione + rebuild

--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -52,10 +52,10 @@ Free Documentation License''.%
     \maketitle
     \tableofcontents
     \cleardoublepage
-    % \listoffigures
-    % \cleardoublepage
-    % \listoftables
-    % \cleardoublepage
+    \listoffigures
+    \cleardoublepage
+    \listoftables
+    \cleardoublepage
     %\printacronyms[heading=chapter*]
     %\cleardoublepage
 
