--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -103,7 +103,13 @@ offre ai suoi utenti.
 
 \subsection{Modello dei dati}
 Di seguito è riportato il modello concettuale della base di dati:
-\input{images/er.tex}
+
+\begin{figure}[H]
+	\centering
+	\caption{Il modello concettuale della base di dati}
+	\label{fig:er}
+	\input{images/er.tex}
+\end{figure}
 
 \subsection{Sicurezza e privacy}
 Per quanto riguarda i sistemi di sicurezza, la piattaforma web è suddivisa in 
