--- a/docs/src/parts/documento_requisiti/_scenari.tex
+++ b/docs/src/parts/documento_requisiti/_scenari.tex
@@ -5,16 +5,16 @@
 % with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Registration}
-	\label{tab:use-case-registration}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Registration}
+	\label{tab:use-case-registration}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Registration (ID: 1)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente visitatore si registra alla piattaforma Emotionally.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Guest\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente non deve essere già registrato alla piattaforma\\\end{tabular}\\
@@ -23,18 +23,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Uno scenario alternativo viene attivato al punto 2: il sistema informa l'utente che l'email inserita non è valida o corretta\\~~\llap{\textbullet}~~Uno scenario alternativo viene attivato al punto 3: il sistema informa l'utente che la password inserita non è valida\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Login}
-	\label{tab:use-case-login}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Login}
+	\label{tab:use-case-login}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Login (ID: 3)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole effettuare l'accesso alla piattaforma Emotionally\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve aver già effettuato la registrazione\\\end{tabular}\\
@@ -43,18 +43,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Uno scenario alternativo viene innescato al punto 3: il sistema avvisa l'utente che l'email inserita non è valida.\\~~\llap{\textbullet}~~Uno scenario alternativo viene innescato al punto 4: il sistema avvisa l'utente che la password inserita non è valida.\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Logout}
-	\label{tab:use-case-logout}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Logout}
+	\label{tab:use-case-logout}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Logout (ID: 4)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole uscire dalla piattaforma Emotionally.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere già loggato alla piattaforma\\\end{tabular}\\
@@ -63,18 +63,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Create project}
-	\label{tab:use-case-create-project}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Create project}
+	\label{tab:use-case-create-project}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Create project (ID: 5)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole creare un nuovo progetto.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere loggato alla piattaforma\\\end{tabular}\\
@@ -83,18 +83,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Uno scenario alternativo viene innescato al punto 3: il sistema avvisa l'utente di aver inserito un nome di progetto non valido.\\~~\llap{\textbullet}~~Uno scenario alternativo viene innescato al punto 4: Il sistema avvisa l'utente di aver inserito una cartella padre errate\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: View project}
-	\label{tab:use-case-view-project}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: View project}
+	\label{tab:use-case-view-project}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{View project (ID: 6)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole visualizzare uno dei suoi progetti.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve aver effettuato la procedura di login\\~~\llap{\textbullet}~~L'utente deve aver già creato il progetto che vuole visualizzare\\\end{tabular}\\
@@ -103,18 +103,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Edit project}
-	\label{tab:use-case-edit-project}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Edit project}
+	\label{tab:use-case-edit-project}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Edit project (ID: 7)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole modificare un progetto da lui scelto.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere loggato alla piattaforma\\~~\llap{\textbullet}~~Il progetto scelto dall'utente deve essere già stato creato\\\end{tabular}\\
@@ -123,18 +123,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Uno scenario alternativo viene innescato al punto 4.2: Il sistema chiede all'utente se vuole rinominare il video, se vuole sovrascrivere il video con lo stesso nome di quello che si vuole spostare o se si vuole annullare l'operazione\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Remove project}
-	\label{tab:use-case-remove-project}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Remove project}
+	\label{tab:use-case-remove-project}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Remove project (ID: 8)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole rimuovere un suo progetto dalla piattaforma.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve aver effettuato la procedura di login\\~~\llap{\textbullet}~~Il progetto da eliminare deve essere stato già creato dall'utente\\\end{tabular}\\
@@ -143,18 +143,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Upload video}
-	\label{tab:use-case-upload-video}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Upload video}
+	\label{tab:use-case-upload-video}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Upload video (ID: 9)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole inserire un nuovo video.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere loggato nel sistema\\~~\llap{\textbullet}~~Il progetto in cui inserire il video deve essere stato già creato\\~~\llap{\textbullet}~~Il video non deve essere stato già inserito nel progetto in cui lo vuole caricare\\\end{tabular}\\
@@ -163,18 +163,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Edit video}
-	\label{tab:use-case-edit-video}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Edit video}
+	\label{tab:use-case-edit-video}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Edit video (ID: 10)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole modificare un video da lui scelto.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve aver effettuato la procedura di login\\~~\llap{\textbullet}~~Il video deve essere stato già caricato\\\end{tabular}\\
@@ -183,18 +183,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Uno scenario alternativo si innesca nel punto 3.1.1: il sistema avverte l'utente che il nome inserito non è valido\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Remove video}
-	\label{tab:use-case-remove-video}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Remove video}
+	\label{tab:use-case-remove-video}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Remove video (ID: 11)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole rimuove un video dalla piattaforma Emotionally.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve aver effettuato il login\\~~\llap{\textbullet}~~Il video deve essere stato già caricato sulla piattaforma\\\end{tabular}\\
@@ -203,18 +203,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: View video}
-	\label{tab:use-case-view-video}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: View video}
+	\label{tab:use-case-view-video}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{View video (ID: 12)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole visionare un video da lui scelto.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere loggato\\~~\llap{\textbullet}~~Il video deve essere già stato caricato nella piattaforma\\\end{tabular}\\
@@ -223,18 +223,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Share project}
-	\label{tab:use-case-share-project}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Share project}
+	\label{tab:use-case-share-project}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Share project (ID: 13)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole condividere un proprio progetto con un altro o con altri utenti.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente che condivide il suo progetto deve aver effettuato la procedura di login\\~~\llap{\textbullet}~~Il progetto deve essere stato già creato\\~~\llap{\textbullet}~~L'utente o gli utenti con cui codividere il progetto devono essere registrati alla piattaforma Emotionally\\\end{tabular}\\
@@ -243,18 +243,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Update user data}
-	\label{tab:use-case-update-user-data}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Update user data}
+	\label{tab:use-case-update-user-data}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Update user data (ID: 15)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole aggiornare i propri dati inseriti in fase di registrazione.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve aver effettuato già la procedura di login\\\end{tabular}\\
@@ -263,18 +263,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Uno scenario alternativo viene innescato nel punto 4.1: il sistema avvisa l'utente che la vecchia password non è stata inserita correttamente.\\~~\llap{\textbullet}~~Uno scenario alternativo viene innescato nel punto 4.2: il sistema avvisa l'utente che la nuova password inserita non è valida.\\~~\llap{\textbullet}~~Uno scenario alternativo viene innescato nel punto 4.3: il sistema avvisa l'utente che la nuova password non è stata re-inserita correttamente.\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: View report}
-	\label{tab:use-case-view-report}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: View report}
+	\label{tab:use-case-view-report}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{View report (ID: 16)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole visualizzare un report.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere loggato\\~~\llap{\textbullet}~~Il progetto deve essere stato già creato\\~~\llap{\textbullet}~~Il video deve essere stato già caricato\\~~\llap{\textbullet}~~Il progetto deve contenere almeno un video\\\end{tabular}\\
@@ -283,18 +283,18 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
 
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Download report}
-	\label{tab:use-case-download-report}
+%\begin{table}[H]
+	%\centering
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.2\textwidth}|m{.7\textwidth}|@{}}
+	\caption{Use Case: Download report}
+	\label{tab:use-case-download-report}
 		\hline
 		\rowcolor{emotionally-color!35}
 		{\textbf{Nome caso d'uso}} & {\textbf{Download report (ID: 19)}} \\\hline
-		\endfirsthead
+		\endhead
 		Descrizione & L'utente vuole scaricare il report di un suo progetto o di un suo video.\\
 		Attori & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~User\\\end{tabular}\\
 		Pre-condizioni & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~L'utente deve essere loggato\\~~\llap{\textbullet}~~Il progetto deve essere stato già creato\\~~\llap{\textbullet}~~Il video deve essere stato già caricato\\~~\llap{\textbullet}~~Il progetto deve contenere almeno un video\\\end{tabular}\\
@@ -303,4 +303,4 @@
 		Scenario alternativo & \begin{tabular}{m{0.9\linewidth}}~~\llap{\textbullet}~~Nessuno\\\end{tabular}\\\hline
 		
 	\end{longtable}
-\end{table}
+%\end{table}
