Correzioni di errori

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -125,7 +125,7 @@ Per quanto riguarda l'area privata, l'accesso è consentito solo attraverso il
 login. Da qui l'utente loggato avrà a disposizione di tutti gli strumenti utili 
 per poter effettuare un'analisi. L'utente, inoltre, per poter accedere dovrà 
 quindi effettuare una prima fase di registrazione dove dovrà fornire dati 
-sensibili quali email, password, nome, cognome e sesso.
+sensibili quali email, password, nome e cognome.
 
 \section{Requisiti di contenuto}\label{sec:requisiti-di-contenuto}
 \begin{table}[H]
