--- a/docs/src/parts/documento_requisiti/_requisiti_gestione.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti_gestione.tex
@@ -52,5 +52,5 @@ tool Adobe XD con licenza gratuita.
 Per la gestione del commit del progetto viene utilizzato il sistema GitHub. Per 
 l'istallazione del web server portatile è utilizzata l'applicazione UwAmp.
 
-Vengono sfruttate le API di Affectiva per poter effettuare l'analisi dei 
-sentimenti.
+Vengono sfruttate le API di Affectiva per poter effettuare l'analisi delle 
+emozioni.
